--- a/index.html
+++ b/index.html
@@ -18,23 +18,23 @@
 				<li class="header-item">Associate the page with the payment system</li>
 			</ul>
 		</div>
-		<img class="img-sport" src="img/shape_9_345.png" alt="Product" class="img-header">
+		<img class="img-sport" src="img/shape.png" style="height: 214px;" alt="product" class="img-header">
 	</header>
 
 	<section class="about-product">
 		<div>
 			<h2 class="header-title">About your product</h2>
-			<br>
+
 			<p class="product-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis facilis fuga, illo
 				at.
 				Natus eos, eligendi illum rerum
 				omnis porro ex, magni, explicabo veniam incidunt in quam sapiente ut ipsum.</p>
-			<br>
+
 			<p class="product-text">Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel
 				exercitationem ullam quos aut nostrum
 				cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</p>
 		</div>
-		<img src="img/video_14.png" alt="video">
+		<img src="img/video.png" alt="video" style="height: 245px;">
 
 	</section>
 
@@ -80,7 +80,8 @@
 		<div class="screenshots-block">
 			<div class="screenshots-oject">
 				<div>
-					<img class="imag-screenshots" src="img/image_126 (1).png" alt="">
+					<img class="imag-screenshots" src="img/image.png" alt="imag-screenshots"
+						style="height: 150px;"></img>
 				</div>
 				<div>
 					<h3 class="screenshots-title">The description for the image</h3>
@@ -94,7 +95,8 @@
 			</div>
 			<div class="screenshots-oject">
 				<div>
-					<img class="imag-screenshots" src="img/image_126 (1).png" alt="">
+					<img class="imag-screenshots" src="img/image.png" alt="imag-screenshots"
+						style="height: 150px;"></img>
 				</div>
 				<div>
 					<h3 class="screenshots-title">The description for the image</h3>
@@ -108,7 +110,8 @@
 			</div>
 			<div class="screenshots-oject">
 				<div>
-					<img class="imag-screenshots" src="img/image_126 (1).png" alt="">
+					<img class="imag-screenshots" src="img/image.png" alt="imag-screenshots"
+						style="height: 150px;"></img>
 				</div>
 				<div>
 					<h3 class="screenshots-title">The description for the image</h3>
@@ -122,7 +125,8 @@
 			</div>
 			<div class="screenshots-oject">
 				<div>
-					<img class="imag-screenshots" src="img/image_126 (1).png" alt="">
+					<img class="imag-screenshots" src="img/image.png" alt="imag-screenshots"
+						style="height: 150px;"></img>
 				</div>
 				<div>
 					<h3 class="screenshots-title">The description for the image</h3>
@@ -143,7 +147,7 @@
 		<div class="screenshots-block">
 			<div class="screenshots-oject">
 				<div>
-					<img class="imag-screenshots" src="img/coment-imag.png" alt="">
+					<img class="imag-screenshots" src="img/coment-imag.png" alt="" style="height: 75px;">
 				</div>
 				<div class="coment-fon">
 					<p class="coment-text">Porro officia cumque sint deleniti nemo facere rem vitae odit inventore
@@ -156,7 +160,7 @@
 			</div>
 			<div class="screenshots-oject">
 				<div>
-					<img class="imag-screenshots" src="img/coment-imag.png" alt="">
+					<img class="imag-screenshots" src="img/coment-imag.png" alt="coment-imag" style="height: 75px;">
 				</div>
 				<div class="coment-fon">
 					<p class="coment-text">Porro officia cumque sint deleniti nemo facere rem vitae odit inventore
@@ -168,7 +172,7 @@
 			</div>
 			<div class="screenshots-oject">
 				<div>
-					<img class="imag-screenshots" src="img/coment-imag.png" alt="">
+					<img class="imag-screenshots" src="img/coment-imag.png" alt="coment-imag" style="height: 75px;">
 				</div>
 				<div class="coment-fon">
 					<p class="coment-text">Porro officia cumque sint deleniti nemo facere rem vitae odit inventore
@@ -180,7 +184,7 @@
 			</div>
 			<div class="screenshots-oject">
 				<div>
-					<img class="imag-screenshots" src="img/coment-imag.png" alt="">
+					<img class="imag-screenshots" src="img/coment-imag.png" alt="coment-imag" style="height: 75px;">
 				</div>
 				<div>
 					<div class="coment-fon">
@@ -206,11 +210,50 @@
 				<ol class="product-item">
 					<li>Porro officia cumque sint deleniti;</li>
 					<li>Тemo facere rem vitae odit;</li>
-					<li>Cum odio, iste quia doloribus autem; 4.</li>
+					<li>Cum odio, iste quia doloribus autem;</li>
 					<li>Aperiam nulla ea neque.</li>
 				</ol>
+				<a href="#" class="social-link">BAY</a>
 			</div>
 
+			<div class="bay-product premium">
+				<h3 class="pruduct-title">Premium</h3>
+				<div class="price-block">
+					<p class="price">$100</p>
+				</div>
+				<ol class="product-item">
+					<li>Porro officia cumque sint deleniti;</li>
+					<li>Тemo facere rem vitae odit;</li>
+					<li>Cum odio, iste quia doloribus autem;</li>
+					<li>Aperiam nulla ea neque.</li>
+					<li>Porro officia cumque sint deleniti;</li>
+					<li>Тemo facere rem vitae odit;</li>
+					<li>Cum odio, iste quia doloribus autem;</li>
+					<li>Aperiam nulla ea neque.</li>
+				</ol>
+				<a href="#" class="social-link">BAY</a>
+			</div>
+			<div class="bay-product lux">
+				<h3 class="pruduct-title">Lux</h3>
+				<div class="price-block">
+					<p class="price">$100</p>
+				</div>
+				<ol class="product-item">
+					<li>Porro officia cumque sint deleniti;</li>
+					<li>Тemo facere rem vitae odit;</li>
+					<li>Cum odio, iste quia doloribus autem;</li>
+					<li>Aperiam nulla ea neque.</li>
+					<li>Porro officia cumque sint deleniti;</li>
+					<li>Тemo facere rem vitae odit;</li>
+					<li>Cum odio, iste quia doloribus autem;</li>
+					<li>Aperiam nulla ea neque.</li>
+					<li>Porro officia cumque sint deleniti;</li>
+					<li>Тemo facere rem vitae odit;</li>
+					<li>Cum odio, iste quia doloribus autem;</li>
+					<li>Aperiam nulla ea neque.</li>
+				</ol>
+				<a href="#" class="social-link">BAY</a>
+			</div>
 		</div>
 
 	</section>
