--- a/index.html
+++ b/index.html
@@ -258,7 +258,34 @@
 
 	</section>
 
+	<footer class="footer">
+		<div class="form">
+			<form class="form-text" action="#" method="POST" enctype="multipart/form-data">
+				<div class="input">
+					<input type="text" name="username" placeholder="Ваше имя">
+				</div>
+				<div>
+					<input type="email" name="username" placeholder="Ваш mail">
+				</div>
+				<div>
+					<textarea name="text" placeholder="Ваше сообщение"></textarea>
+				</div>
+				<div class="button-block">
+					<button class="button-send" type="submit">SEND</button>
+				</div>
+			</form>
+		</div>
+		<div class="footer-contacts">
+			<ul class="contacts">
+				<li class="contact skype">here_your_login_skype;</li>
+				<li class="contact icq">279679659</li>
+				<li class="contact email">psdhtmlcss@mail.ru;</li>
+				<li class="contact phone">80 00 4568 55 55</li>
+			</ul>
+		</div>
 
+
+	</footer>
 </body>
 
 </html>
