добавил эффекты на сылки и соц сетки

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="css/index.css">
+	<script src="https://kit.fontawesome.com/95caec2c9a.js" crossorigin="anonymous"></script>
 	<title>Document</title>
 </head>
 
@@ -213,7 +214,7 @@
 					<li>Cum odio, iste quia doloribus autem;</li>
 					<li>Aperiam nulla ea neque.</li>
 				</ol>
-				<a href="#" class="social-link">BAY</a>
+				<a href="#" class="social-link">BUY</a>
 			</div>
 
 			<div class="bay-product premium">
@@ -231,7 +232,7 @@
 					<li>Cum odio, iste quia doloribus autem;</li>
 					<li>Aperiam nulla ea neque.</li>
 				</ol>
-				<a href="#" class="social-link">BAY</a>
+				<a href="#" class="social-link">BUY</a>
 			</div>
 			<div class="bay-product lux">
 				<h3 class="pruduct-title">Lux</h3>
@@ -252,7 +253,7 @@
 					<li>Cum odio, iste quia doloribus autem;</li>
 					<li>Aperiam nulla ea neque.</li>
 				</ol>
-				<a href="#" class="social-link">BAY</a>
+				<a href="#" class="social-link">BUY</a>
 			</div>
 		</div>
 
@@ -282,7 +283,24 @@
 				<li class="contact email">psdhtmlcss@mail.ru;</li>
 				<li class="contact phone">80 00 4568 55 55</li>
 			</ul>
-		</div>
+			<div class="icon-social">
+				<a href="https://www.youtube.com/" target="blank">
+					<img class="icon" src="img/iconfinder_youtube.svg" alt="icon-youtobe">
+				</a>
+				<a href="https://www.youtube.com/" target="blank">
+					<img class="icon" src="img/iconfinder_social-instagram.svg" alt="icon-youtobe">
+				</a>
+				<a href="https://www.youtube.com/" target="blank">
+					<img class="icon" src="img/iconfinder_social_twitter.svg" alt="icon-youtobe">
+				</a>
+				<a href="https://www.youtube.com/" target="blank">
+					<img class="icon" src="img/iconfinder_whatsapp.svg" alt="icon-youtobe">
+				</a>
+				<a href="https://www.youtube.com/" target="blank">
+					<img class="icon" src="img/iconfinder_square-google.svg" alt="icon-youtobe">
+				</a>
+			</div>
+
 
 
 	</footer>
