--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
 				<li class="contact phone">80 00 4568 55 55</li>
 			</ul>
 			<div class="icon-social">
-				<a href="https://www.youtube.com/" target="blank">
+				<a href="https://megapit.kz/" target="blank">
 					<img class="icon" src="img/iconfinder_youtube.svg" alt="icon-youtobe">
 				</a>
 				<a href="https://www.youtube.com/" target="blank">
